--- a/style.css
+++ b/style.css
@@ -1,22 +1,3 @@
-.dropdown-menu.animate {
-  animation: slideOut 0.5s forwards;
-}
-
-@keyframes slideOut {
-  from {
-    transform: translateX(100%);
-  }
-  to {
-    transform: translateX(0);
-  }
-}
-
-/* custom CSS to position dropdown menu options */
-.dropdown-menu.animate.show {
-  right: 1%;
-  left: auto;
-}
-
 /* custom CSS for large buttons */
 .btn-lg-custom {
   font-size: 1.5rem;
@@ -30,7 +11,7 @@
 }
 .container-fluid {
   margin-right: 25%;
-  height: calc(100vh - 57px);
+  height: calc(100vh - 4em);
   overflow-y: auto;
 }
 
