--- a/style.css
+++ b/style.css
@@ -90,6 +90,9 @@
   height: auto;
   box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.5); /* shadow effect */
 }
+.description-box:hover {
+  box-shadow: 0px 0px 10px 0px rgba(0, 10, 0, 10); /* shadow effect */
+}
 #scroll-to-top {
   display: flex; 
   flex-direction: column; 
